UPD-url-of-pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL='home.php'">
+    <meta http-equiv="refresh" content="0; URL='https://mohit4449.github.io/juicyrush/home.php'">
     <title>Redirecting...</title>
 </head>
 <body>
