--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL='https://mohit4449.github.io/juicyrush/home.php'">
     <title>Redirecting...</title>
+    <script type="text/javascript">
+        window.location.href = "https://mohit4449.github.io/juicyrush/home.php";
+    </script>
 </head>
 <body>
-    If you are not redirected automatically, <a href="home.php">click here</a>.
+    If you are not redirected automatically, <a href="https://mohit4449.github.io/juicyrush/home.php">click here</a>.
+    <footer>
+        v-1.0.1
+    </footer>
 </body>
 </html>
